# songs_analyzer

./: .cache  .gitignore  Pipfile  README.md  pyproject.toml  scrapy_letras.py  setup.py  tasks.py
app/: .cache  app.py
data/raw/: letrasvf.json  playlists_uri_name.csv
models/: transformer.model
notebooks/: .cache  notebook1.ipynb  notebook2.ipynb  teste.ipynb  title_preprocessing.ipynb
notebooks/.ipynb_checkpoints/: notebook1-checkpoint.ipynb  notebook2-checkpoint.ipynb
songs_analyzer/: config.py  songs_fetcher.py
songs_analyzer/app/: app.py  multipage.py
songs_analyzer/app/pages/: about.py  recommender.py  upload.py
songs_analyzer/data/: playlist.py  spotify.py
tests/: test_songs_analyzer.py
