[tool.poetry]
name = "songs_analyzer"
version = "0.1.0"
description = ""
authors = ["Andre Rodrigues <andrelmarques11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.1"
invoke = "^1.6.0"
toml = "^0.10.2"
ipykernel = "^6.6.1"
pandas = "^1.3.5"
sklearn = "^0.0"
numpy = "^1.22.0"
nltk = "^3.6.7"
ipdb = "^0.13.9"
gensim = "^4.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poetry2setup = "^1.0.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
